<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Panier"
        android:id="@+id/Panier"
        android:onClick="onClickButton"
        android:layout_marginTop="5dp"
        android:background="#ff9952ff"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Hauts"
        android:id="@+id/Hauts"
        android:layout_marginTop="5dp"
        android:background="#ff9952ff"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Robes"
        android:id="@+id/Robes"
        android:layout_marginTop="5dp"
        android:background="#ff9952ff"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Pantalons"
        android:id="@+id/Pantalons"
        android:layout_marginTop="5dp"
        android:background="#ff9952ff"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Jupes_Shorts"
        android:id="@+id/Jupes_Shorts"
        android:layout_marginTop="5dp"
        android:background="#ff9952ff"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Accessoires"
        android:id="@+id/Accessoires"
        android:layout_marginTop="5dp"
        android:background="#ff9952ff"
        />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Chaussures"
        android:id="@+id/Chaussures"
        android:layout_marginTop="5dp"
        android:background="#ff9952ff"
        />


</LinearLayout>
